--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,13 @@
     padding: 0;
 }
 .header{
-    background-image: url(../images/donation1.jpg);
+    background-image: url(../images/background30.png);
     text-align: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
 }
 .sub_header{
-    padding: 170px 0;
+    padding: 420px 0;
 }
 .header h1{
     color: #FFF;
@@ -82,7 +82,7 @@
 
 }
 .other-amount input{
-    padding: 10px 369px;
+    padding: 10px 344px 10px 391px;
     border: none;
     margin-top: 30px;
 }
@@ -123,4 +123,33 @@
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
+}
+/* live depend on your donation section styles */
+.information{
+    display: flex;
+    width: 65%;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+.information img {
+    width: 45%;
+    margin: 30px;
+    border-radius: 10px;
+    height: 400px;
+}
+.info-title{
+    color: #121212;
+    font-family: Inter;
+    font-size: 45px;
+    font-weight: 700;
+    margin: 25px 0px;
+}
+.info-article{
+    color: #707070;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+    margin: 15px 0px;
 }
