--- a/styles/style.css
+++ b/styles/style.css
@@ -153,3 +153,60 @@
     line-height: 28px;
     margin: 15px 0px;
 }
+/* updatese */
+.subscribes{
+    align-items: centers;
+}
+.subscribe{
+    width: 40%;
+    margin: auto;
+    background-color: #FFF4D6;
+    padding: 30px;
+    border-radius: 5px;
+}
+.subscribes p{
+    text-align: center;
+}
+
+.subscribe input{
+    width: 100%;
+    height: 48px;
+    border-radius:5px;
+    background: #D9D9D9;
+    display: block;
+    margin: 8px 0px;
+}
+.subscribe-btn{
+    background-color:#FF5959;;
+    border: none;
+    padding: 15px 30px;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    display: block;
+    text-align: center;
+    margin: auto;
+}
+
+
+
+
+
+
+/* footer section */
+
+footer{
+    background: #0B0D17;
+    text-align: center;
+    padding: 100px 0px 100px 0px;
+}
+
+.humble{
+    color: #FF5959;
+    font-family: Lobster;
+    font-size: 36px;
+
+}
+footer p{
+    color: white;
+}
